fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,7 @@ body {
   border-radius: 8px;
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
   height: 260px;
-  margin: 10rem auto 10rem auto;
-  width: 329px;
+  width: 300px;
 }
 
 #card-content {
